--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,5 @@
 name = Role-LibXSLT-Extender
 abstract = A Moose Role to simplify creating/registering Perl extension functions for LibXSLT
-version = 0.01
 author = Kip Hampton <khampton@totalcinema.com>
 license = Perl_5
 copyright_holder = Kip Hampton
@@ -8,5 +7,15 @@ copyright_holder = Kip Hampton
 [Prereq]
 Moose = 0
 XML::LibXSLT = 1.70
+namespace::autoclean = 0
 
 [@Classic]
+[@Git]
+changelog   = Changes
+allow_dirty = dist.ini
+allow_dirty = Changes
+commit_msg  = v%v%n%n%c
+tag_format  = %v
+tag_message = %v
+push_to     = origin
+[AutoVersion]
